@@ -219,7 +219,7 @@ function set_user_setting(string $config_name, mixed $value, ?int $user = null):
 		if (strlen($config_name) > 75) {
 			cacti_log("ERROR: User setting name '$config_name' is too long, will be truncated", false, 'SYSTEM');
 		}
-		
+
 		db_execute_prepared('REPLACE INTO settings_user
 			SET user_id = ?,
 			name = ?,
@@ -1433,6 +1433,10 @@ function cacti_log($string, $output = false, $environ = 'CMDPHP', $level = '') {
 
 	if (!isset($database_log)) {
 		$database_log = false;
+	}
+
+	if (trim($string) == '') {
+		return false;
 	}
 
 	$last_log     = $database_log;
@@ -5503,7 +5507,11 @@ function mailer(array|string $from, array|string $to, null|array|string $cc = nu
 	cacti_log($message, false, 'MAILER');
 
 	if ($result == false) {
-		cacti_log(cacti_debug_backtrace($rtype), false, 'MAILER');
+		$backtrace = trim(cacti_debug_backtrace($rtype));
+
+		if ($backtrace != '') {
+			cacti_log($backtrace, false, 'MAILER');
+		}
 	}
 
 	return $error;
