@@ -163,6 +163,7 @@ Cacti CHANGELOG
 -issue#5459: There is no option to not duplicate Graph Template Data Query association when duplicating a Graph Template
 -issue#5460: When duplicating a Data Template errors can appear in the Cacti log
 -issue#5462: Package preview aparantely making changes to Cacti Templates or there is a Caching issue
+-issue#5467: Cacti logging throws error when attempting to generate a log message from empty log string in PHP 8.x
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature#5418: Display device class before package import
